# copilot-fractional.quest

./: .gitignore  CONTENT_CREATION_PLAN.md  CONTENT_CREATION_PRD.md  CONTENT_IMPROVEMENT_PLAN.md  CONTENT_OPTIMIZATION_PLAN.md  CONTENT_PLAN.md  CONTENT_RESTART_PROMPT.md  MISSING_PAGES_AUDIT.md  PRD.md  RESTART.md  RESTART_PLAN.md  RESTART_PROMPT.md  claude.md  mdx-components.tsx  next.config.ts  package.json  plan.md
.claude/: MASTER_TEMPLATE.md  QUICK_REF.md  RESTART.md  RESTART_MDX.md  STARTER_CLAUDE.md
.claude/commands/: create-page.md  create-prd.md  evolve.md  execute.md  plan.md  prime.md
.claude/reference/: content-plan.md  copilotkit-integration.md  database-pages.md  i18n-guide.md  job-schema.md  mdx-content.md  role-data.md  seo-content.md  seo-templates.md  tavily-enrichment-prd.md
agent/: pyproject.toml
agent/.railway/: config.json
agent/cron-trigger/: Dockerfile  railway.json  trigger.sh
agent/migrations/: 001_job_import_tracking.sql
agent/src/: agent.py  job_importer.py  main.py  news_importer.py
agent/src/data_sources/: __init__.py  apify_client.py  serper_client.py  unsplash_client.py  web_scraper.py
docs/: job-content-guidelines.md
public/: llms.txt  site.webmanifest
scripts/: convert-to-webp.mjs  create-pages.js  enhance-pages.js  enhance-thin-pages.js  fix-canonicals.ts  role-config.ts  run-agent.sh  validate-job-urls.ts
src/: middleware.ts  middleware.ts.disabled
src/app/: HomePageClient.tsx  HomePageCopilotContent.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: AIInsightsPanel.tsx  HotJobs.tsx  (+42 more)
(+395 files in other folders)
